--- a/Vanp.Web/Areas/Customer/Views/CProduct/Insert.cshtml
+++ b/Vanp.Web/Areas/Customer/Views/CProduct/Insert.cshtml
@@ -6,8 +6,8 @@
 @section css{
     <style type="text/css">
         .lie {
-        color: red;
-    }
+            color: red;
+        }
     </style>
 }
 <form method="post" action="" class="insert-form" enctype="multipart/form-data">
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="form-group col-md-4">
             <label for="pricedefault">Giá sản phẩm <span class="lie">*</span></label>
-            <input type="text" name="PriceDefault" class="form-control touchspin" id="pricedefault" placeholder="2000000">
+            <input type="text" name="PriceDefault" class="form-control" id="pricedefault" placeholder="2000000">
         </div>
         <div class="form-group col-md-4">
             <label for="price">Giá mua ngay <span class="lie">*</span></label>
@@ -45,15 +45,15 @@
     <div class="row">
         <div class="form-group col-md-4">
             <label for="image1">Hình ảnh 1 <span class="lie">*</span></label>
-            <input type="file" id="image1" accept="image/*">
+            <input type="file" id="image1" name="image1" accept="image/*">
         </div>
         <div class="form-group col-md-4">
-            <label for="imag2">Hình ảnh 2 <span class="lie">*</span></label>
-            <input type="file" id="imag2" accept="image/*">
+            <label for="image2">Hình ảnh 2 <span class="lie">*</span></label>
+            <input type="file" id="image2" name="image2" accept="image/*">
         </div>
         <div class="form-group col-md-4">
             <label for="image3">Hình ảnh 3 <span class="lie">*</span></label>
-            <input type="file" id="image3" accept="image/*">
+            <input type="file" id="image3" name="image3" accept="image/*">
         </div>
     </div>
     <div class="form-group">
@@ -63,30 +63,11 @@
     <button type="submit" class="btn btn-default">Đăng bán</button>
 </form>
 @section scripts{
-    <script src="~/Content/boostrap-file-input/js/fileinput.min.js"></script>
-    <script src="~/Content/tinymce/jquery.tinymce.min.js"></script>
-    <script src="~/Content/tinymce/tinymce.min.js"></script>
-    <script src="~/Scripts/apps/validate-addpro.js"></script>
-    <script>
-        $("input[class='touchspin']").TouchSpin({
-            verticalbuttons: true,
-            max: 1000000000,
-            step: 100000
-        });
-        tinymce.init({
-            selector: 'textarea',
-            height: 250,
-            menubar: false,
-            plugins: [
-              'advlist autolink lists link image charmap print preview anchor',
-              'searchreplace visualblocks code fullscreen',
-              'insertdatetime media table contextmenu paste code'
-            ],
-            toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
-            content_css: [
-              '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
-              '//www.tinymce.com/css/codepen.min.css'],
-            encoding: "xml",
-        });
-    </script>
+    <script src="~/Content/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
+<script src="~/Content/boostrap-file-input/js/fileinput.min.js"></script>
+<script src="~/Content/bootstrap-select/js/bootstrap-select.min.js"></script>
+<script src="~/Content/tinymce/jquery.tinymce.min.js"></script>
+<script src="~/Content/tinymce/tinymce.min.js"></script>
+<script src="~/Scripts/apps/validate-addpro.js"></script>
+
 }
