--- a/Vanp.Web/Views/Product/DetailProduct.cshtml
+++ b/Vanp.Web/Views/Product/DetailProduct.cshtml
@@ -63,10 +63,14 @@
                                                 <p class="rating-links"> <a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Your Review</a> </p>
                                             </div>
                                             <div class="price-block">
-                                                <div class="price-box">
-                                                    <p class="special-price"> <span class="price-label">Special Price</span> <span id="product-price-48" class="price"> $309.99 </span> </p>
-                                                    <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price"> $315.99 </span> </p>
-                                                    <p class="availability in-stock pull-right"><span>In Stock</span></p>
+                                                <div class="price-box col-md-12">
+                                                    <div class="col-md-6">
+                                                        <p class="special-price"> <span class="price-label">Special Price</span> <span id="product-price-48" class="price"> $309.99 </span> </p>
+                                                    </div>
+                                                    <div class="col-md-6">
+                                                        <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price"> $315.99 </span> </p>
+                                                        @*<p class="availability in-stock pull-right"><span>In Stock</span></p>*@
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="short-description">
