update detail view

--- a/Vanp.Web/Views/Product/DetailProduct.cshtml
+++ b/Vanp.Web/Views/Product/DetailProduct.cshtml
@@ -88,7 +88,7 @@
                                                 <div class="add-to-cart">
                                                     <div class="pull-left">
                                                         <div class="custom pull-left">
-                                                            <input type="text" class="input-text qty" maxlength="30" id="qty" name="qty">
+                                                            <input type="text" class="input-text qty" maxlength="30" style="width:200px" id="qty" name="qty">
                                                         </div>
                                                     </div>
                                                     <button class="button btn-cart" title="Add to Cart" type="button">Đặt giá</button>
@@ -578,3 +578,7 @@
     </div>
 </section>
 <!-- Main Container End -->
+@section scripts{
+    <script src="~/Scripts/apps/validate-addpro.js"></script>
+
+}
